# zerotoprod

./: .env  Cargo.toml  configuration.yaml
TestLogs/: zerotoprod.2025-10-24  zerotoprod.2025-10-27
logs/: zerotoprod.2025-10-24  zerotoprod.2025-10-27  zerotoprod.2025-10-28  zerotoprod.2025-10-29
migrations/: 20251017063145_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
src/routes/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/tests/: health_check.rs
