[package]
name = "zerotoprod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
env_logger="0.9"
log="0.4"
tracing = { version = "0.1.41", features = ["log"] }


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.syn]
version = "1.0"
features = ["full"]
